Fix failures in disconnect_kill_cursors and disconnect_abort_transactions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • Security 2025-02-17
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The bindsToOperationState indicates to ClientTransportObserverMongos to kill open cursors and in progress transactions when killing the client. This was useful when non-LB connections could not go through the LB port, but now we need a better solution here.

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: