SERVER-100867 Fix failures in disconnect_kill_cursors and disconnect_abort_transactions (#32420)

Co-authored-by: Shreyas Kalyan <shreyas.kalyan@mongodb.com>
GitOrigin-RevId: 4563c95ceea4742602afb5185606edc8f1d381fa