jstests/sharding/load_balancer_support/disconnect_aborts_txns.js
@@ -5,6 +5,7 @@
  *    embedded_router_incompatible,
  *   uses_multi_shard_transaction,
  *   uses_transactions,
+ *   requires_fcv_81,
  * ]
  *
  * Tests that when a load-balanced client disconnects, its in-progress transactions are aborted
@@ -37,6 +38,8 @@ function startTxn(host, dbName, collName, countdownLatch, appName) {
     const newMongo = new Mongo(`mongodb://${host}/?appName=${appName}`);
     assert.commandWorked(newMongo.adminCommand(
         {configureFailPoint: "clientIsConnectedToLoadBalancerPort", mode: "alwaysOn"}));
+    assert.commandWorked(
+        newMongo.adminCommand({configureFailPoint: "clientIsLoadBalancedPeer", mode: "alwaysOn"}));
     // We manually generate a logical session and send it to the server explicitly, to prevent
     // the shell from making its own logical session object which will attempt to explicitly
     // abort the transaction on disconnection. In this way, we simulate a "hard partition"
@@ -117,5 +120,7 @@ assert.soon(() => {
 
 assert.commandWorked(
     admin.adminCommand({configureFailPoint: "clientIsConnectedToLoadBalancerPort", mode: "off"}));
+assert.commandWorked(
+    admin.adminCommand({configureFailPoint: "clientIsLoadBalancedPeer", mode: "off"}));
 
 st.stop();
